# BoidEatLine

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
BoidEatLine/: BoidClass.py  SceneClass.py  main.py
See_as_/: BoidClass.py  SceneClass.py  main.py
boid_art/: __init__.py  __main__.py  cli.py
boid_art/engine/: __init__.py  boid.py  core.py  memory.py  observer.py
boid_art/scenes/: swarm_scene.py
boid_art/tests/: conftest.py  test_events.py  test_headless.py  test_memory.py  test_observer.py
boid_art/ui/: hud.py  pygame_front.py
boid_art/utils/: headless.py
