[tool.poetry]
name = "boid_eat_line"
version = "0.1.0"
description = "Boid simulation with observer"
authors = ["Codex <codex@openai.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
pygame = "^2.5"
networkx = "^3.3"
pytest = "^8.2"
pytest-asyncio = "^0.23"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
ruff = "^0.4"
mypy = "^1.8"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
